tests/purs/failing/LetPatterns4.purs
-- @shouldFailWith ErrorParsingModule
module Main where

data X a = X a

X a = a
